--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,800&family=Nunito+Sans:opsz,wght@6..12,200;6..12,400;6..12,800&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/react192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +27,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TASK's App</title>
   </head>
-  <body>
+  <body> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <section>
+      <h1>TASK's app   </h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    </section>
   </body>
 </html>
