--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   </head>
   <body> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <section>
+    <section class="app">
       <h1>TASK's app   </h1>
     <div id="root"></div>
     <!--
@@ -44,6 +44,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <asaid id="modal-todos"></asaid>
     </section>
   </body>
 </html>
