--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#97ca3f" />
+    <meta name="theme-color" content="#1B2E35" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="App de notas"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,12 +27,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TASK's App</title>
+    <title translate="no">TASK's App</title>
   </head>
   <body> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <section class="app">
-      <h1>TASK's app   </h1>
+      <h1 translate="no">TASK's app   </h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
